[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yt_mixer"
version = "0.1.0"
description = "Server-side YouTube Audio Mixer with Ducking and Podcast Processing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "1minds3t", email = "1minds3t@proton.me"}
]
keywords = ["youtube", "audio", "mixer", "podcast", "ffmpeg"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "Flask>=3.0.0",
    "yt-dlp>=2024.0.0",
    "eventlet>=0.33.0"
]

[project.scripts]
yt-mixer = "yt_mixer.cli:main"

[project.urls]
Homepage = "https://github.com/1minds3t/yt_mixer"
Issues = "https://github.com/1minds3t/yt_mixer/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
yt_mixer = ["templates/*.html"]